--- a/index.html
+++ b/index.html
@@ -83,22 +83,24 @@ html,body,h1,h2,h3,h4,h5,h6 {font-family: "Roboto", sans-serif}
         <div class="w3-container">
           <h5 class="w3-opacity"><b>EPA Approved Principal Instructor / Seagull Environmental</b></h5>
           <h6 class="w3-text-teal"><i class="fa fa-calendar fa-fw w3-margin-right"></i>Mar 2015 - <span class="w3-tag w3-teal w3-round">Current</span></h6>
-          <li>Train initial/ refresher courses, including th hands-on, registration, testing and record keeping.</li>
-          <li>Submit all required pre and post notification for courses.</li>
-          <li>Train instructors on how to manage courses and use new technology.</li>
+          <li>Train initial/ refresher courses, including th hands-on, registration, testing and record keeping</li>
+          <li>Submit all required pre and post notification for courses</li>
+          <li>Train instructors on how to manage courses and use new technology</li>
           <hr>
         </div>
         <div class="w3-container">
-          <h5 class="w3-opacity"><b>Web Developer / something.com</b></h5>
-          <h6 class="w3-text-teal"><i class="fa fa-calendar fa-fw w3-margin-right"></i>Mar 2012 - Dec 2014</h6>
-          <p>Consectetur adipisicing elit. Praesentium magnam consectetur vel in deserunt aspernatur est reprehenderit sunt hic. Nulla tempora soluta ea et odio, unde doloremque repellendus iure, iste.</p>
+          <h5 class="w3-opacity"><b>Assistant Instructor and Facilitator / Seagull Environmental</b></h5>
+          <h6 class="w3-text-teal"><i class="fa fa-calendar fa-fw w3-margin-right"></i>Oct 2012 - Jan 2015</h6>
+          <li>Assist in the day to day operations of a professional training company</li>
+          <li>Provide a professional setting for the students, and organize the classrooms</li>
           <hr>
         </div>
         <div class="w3-container">
-          <h5 class="w3-opacity"><b>Graphic Designer / designsomething.com</b></h5>
-          <h6 class="w3-text-teal"><i class="fa fa-calendar fa-fw w3-margin-right"></i>Jun 2010 - Mar 2012</h6>
-          <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. </p><br>
-        </div>
+          <h5 class="w3-opacity"><b>Construction and Drywall</b></h5>
+          <h6 class="w3-text-teal"><i class="fa fa-calendar fa-fw w3-margin-right"></i>Jan 2014 - Apr 2015</h6>
+          <li>Install drywall on new constructions</li>
+          <li>Maintain a clean and safe work area</li>
+          <li>Make sure all required paperwork is generated and archived</li>
       </div>
 
       <div class="w3-container w3-card w3-white">
