--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@ html,body,h1,h2,h3,h4,h5,h6 {font-family: "Roboto", sans-serif}
       <div class="w3-container w3-card w3-white w3-margin-bottom">
         <h2 class="w3-text-grey w3-padding-16"><i class="fa fa-suitcase fa-fw w3-margin-right w3-xxlarge w3-text-teal"></i>Work Experience</h2>
         <div class="w3-container">
-          <h5 class="w3-opacity"><b>EPA Approved Principal Instructor / Seagull Environmental</b></h5>
+          <h5 class="w3-opacity"><b>EPA Approved Principal Instructor</b></h5>
           <h6 class="w3-text-teal"><i class="fa fa-calendar fa-fw w3-margin-right"></i>Mar 2015 - <span class="w3-tag w3-teal w3-round">Current</span></h6>
           <li>Train initial/ refresher courses, including th hands-on, registration, testing and record keeping</li>
           <li>Submit all required pre and post notification for courses</li>
@@ -89,7 +89,7 @@ html,body,h1,h2,h3,h4,h5,h6 {font-family: "Roboto", sans-serif}
           <hr>
         </div>
         <div class="w3-container">
-          <h5 class="w3-opacity"><b>Assistant Instructor and Facilitator / Seagull Environmental</b></h5>
+          <h5 class="w3-opacity"><b>Assistant Instructor and Facilitator</b></h5>
           <h6 class="w3-text-teal"><i class="fa fa-calendar fa-fw w3-margin-right"></i>Oct 2012 - Jan 2015</h6>
           <li>Assist in the day to day operations of a professional training company</li>
           <li>Provide a professional setting for the students, and organize the classrooms</li>
