--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 <link rel='stylesheet' href='https://fonts.googleapis.com/css?family=Roboto'>
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 <style>
-html,body,h1,h2,h3,h4,h5,h6 {font-family: "Roboto", sans-serif}
+html,body,h1,h2,h3,h4,h5,h6,li {font-family: "Roboto", sans-serif}
 </style>
 <body class="w3-light-grey">
 
@@ -84,7 +84,6 @@ html,body,h1,h2,h3,h4,h5,h6 {font-family: "Roboto", sans-serif}
           <h5 class="w3-opacity"><b>EPA Approved Principal Instructor</b></h5>
           <h6 class="w3-text-teal"><i class="fa fa-calendar fa-fw w3-margin-right"></i>Mar 2015 - <span class="w3-tag w3-teal w3-round">Current</span></h6>
           <li>Train initial/ refresher courses, including th hands-on, registration, testing and record keeping</li>
-          <li>Submit all required pre and post notification for courses</li>
           <li>Train instructors on how to manage courses and use new technology</li>
           <hr>
         </div>
@@ -98,7 +97,6 @@ html,body,h1,h2,h3,h4,h5,h6 {font-family: "Roboto", sans-serif}
         <div class="w3-container">
           <h5 class="w3-opacity"><b>Construction and Drywall</b></h5>
           <h6 class="w3-text-teal"><i class="fa fa-calendar fa-fw w3-margin-right"></i>Jan 2014 - Apr 2015</h6>
-          <li>Install drywall on new constructions</li>
           <li>Maintain a clean and safe work area</li>
           <li>Make sure all required paperwork is generated and archived</li>
           <hr>
