--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@ html,body,h1,h2,h3,h4,h5,h6,li {font-family: "Roboto", sans-serif}
     <div class="w3-third">
       <div class="w3-white w3-text-grey w3-card-4">
         <div class="w3-display-container">
-          <img src="DavidEmblem.png" style="width:100%" alt="Avatar" href="https://tastyoreoz.github.io/tastyoreoz/">
+          <img src="drawsunflower.jpg" style="width:100%" alt="Avatar" href="https://tastyoreoz.github.io/tastyoreoz/">
           <div class="w3-display-bottomleft w3-container w3-text-black">
             <h2>Killed by a Cap Gun</h2>
           </div>
