--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@ html,body,h1,h2,h3,h4,h5,h6,li {font-family: "Roboto", sans-serif}
     <div class="w3-third">
       <div class="w3-white w3-text-grey w3-card-4">
         <div class="w3-display-container">
-          <img src="drawsunflower.jpg" style="width:100%" alt="Avatar" href="https://tastyoreoz.github.io/tastyoreoz/">
+          <img src="DavidEmblem.png" style="width:100%" alt="Avatar" href="https://tastyoreoz.github.io/tastyoreoz/">
           <div class="w3-display-bottomleft w3-container w3-text-black">
             <h2>Killed by a Cap Gun</h2>
           </div>
@@ -98,7 +98,7 @@ html,body,h1,h2,h3,h4,h5,h6,li {font-family: "Roboto", sans-serif}
           <h6 class="w3-text-teal"><i class="fa fa-calendar fa-fw w3-margin-right"></i>Jan 2014 - Apr 2015</h6>
           <li>Maintain a clean and safe work area</li>
           <li>Make sure all required paperwork is generated and archived</li>
-          <br>
+      </div>
       </div>
 
       <div class="w3-container w3-card w3-white">
