--- a/index.html
+++ b/index.html
@@ -51,8 +51,7 @@ html,body,h1,h2,h3,h4,h5,h6,li {font-family: "Roboto", sans-serif}
           <p>Oblivious</p>
           <div class="w3-light-grey w3-round-xlarge w3-small">
             <div class="w3-container w3-center w3-round-xlarge w3-teal" style="width:95%">95%</div>
-          </div>
-          <br>
+          </div><br>
 
           <p class="w3-large w3-text-theme"><b><i class="fa fa-globe fa-fw w3-margin-right w3-text-teal"></i>Languages</b></p>
           <p>English</p>
@@ -120,6 +119,15 @@ html,body,h1,h2,h3,h4,h5,h6,li {font-family: "Roboto", sans-serif}
           <h5 class="w3-opacity"><b>School of Coding</b></h5>
           <h6 class="w3-text-teal"><i class="fa fa-calendar fa-fw w3-margin-right"></i>2010 - 2013</h6>
           <p>Bachelor Degree</p><br>
+        </div>
+      </div>
+      
+      <div class="w3-container w3-card w3-white">
+        <div class="w3-display-container">
+          <img src="20201102_192414.jpg" style="width:100%" alt="Avatar" href="https://tastyoreoz.github.io/tastyoreoz/">
+          <div class="w3-display-bottomleft w3-container w3-text-black">
+            <h2></h2>
+          </div>
         </div>
       </div>
 
