--- a/index.html
+++ b/index.html
@@ -107,7 +107,7 @@ html,body,h1,h2,h3,h4,h5,h6,li {font-family: "Roboto", sans-serif}
           <h5 class="w3-opacity"><b>Broward College</b></h5>
           <h6 class="w3-text-teal"><i class="fa fa-calendar fa-fw w3-margin-right"></i>Current</h6>
           <li>Environmental Science Bachelors Program</li>
-          <li>Associates of Science in Engineering</li>
+          <li>Associates of Science Degree in Engineering</li>
           <hr>
         </div>
         <div class="w3-container">
