--- a/index.html
+++ b/index.html
@@ -6,13 +6,20 @@
 <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
 <link rel='stylesheet' href='https://fonts.googleapis.com/css?family=Roboto'>
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+<link href="https://tastyoreoz.github.io/tastyoreoz/">
 <style>
 html,body,h1,h2,h3,h4,h5,h6,li {font-family: "Roboto", sans-serif}
+  
+ body {
+ background-image: url('texture-background-sof...ue-light-1668079.jpg');
+ background-repeat: no-repeat;
+ background-attachment: fixed; 
+ background-size: 100% 100%;
+}
 </style>
 <body class="w3-light-grey">
-  <img src="texture-background-sof...ue-light-1668079.jpg" style="width:100%" alt="Avatar" href="https://tastyoreoz.github.io/tastyoreoz/">
-
-          
+ 
+         
 <!-- Page Container -->
 <div class="w3-content w3-margin-top" style="max-width:1400px;">
 
