--- a/index.html
+++ b/index.html
@@ -49,8 +49,8 @@ html,body,h1,h2,h3,h4,h5,h6,li {font-family: "Roboto", sans-serif}
           </div>
           <p>Attention</p>
           <div class="w3-light-grey w3-round-xlarge w3-small">
-            <div class="w3-container w3-center w3-round-xlarge w3-teal" style="width:5%">
-              <div class="w3-center w3-text-white">5%</div>
+            <div class="w3-container w3-center w3-round-xlarge w3-teal" style="width:10%">
+              <div class="w3-center w3-text-white">10%</div>
             </div>
           </div>
           <p>Oblivious</p>
@@ -82,7 +82,7 @@ html,body,h1,h2,h3,h4,h5,h6,li {font-family: "Roboto", sans-serif}
         <div class="w3-container">
           <h5 class="w3-opacity"><b>EPA Approved Principal Instructor</b></h5>
           <h6 class="w3-text-teal"><i class="fa fa-calendar fa-fw w3-margin-right"></i>Mar 2015 - <span class="w3-tag w3-teal w3-round">Current</span></h6>
-          <li>Train initial/ refresher courses, including th hands-on, registration, testing and record keeping</li>
+          <li>Train initial / refresher courses, including the hands-on, registration, testing and record keeping</li>
           <li>Train instructors on how to manage courses and use new technology</li>
           <hr>
         </div>
