--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@ html,body,h1,h2,h3,h4,h5,h6,li {font-family: "Roboto", sans-serif}
  background-image: url('texture-background-sof...ue-light-1668079.jpg');
  background-repeat: no-repeat;
  background-attachment: fixed; 
- background-size: 100% 100%;
+ background-size: 100%;
 }
 </style>
 <body class="w3-light-grey">
