--- a/index.html
+++ b/index.html
@@ -11,10 +11,10 @@
 html,body,h1,h2,h3,h4,h5,h6,li {font-family: "Roboto", sans-serif}
   
  body {
- background-image: url('texture-background-sof...ue-light-1668079.jpg');
+ background-image: url('1668079.gif');
  background-repeat: no-repeat;
  background-attachment: fixed; 
- background-size: 100%;
+ background-size: 100% 100%;
 }
 </style>
 <body class="w3-light-grey">
