--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@ html,body,h1,h2,h3,h4,h5,h6,li {font-family: "Roboto", sans-serif}
  background-size: 100% 100%;
 }
 </style>
-<body class="w3-light-grey">
+<body class="w3-light-teal">
  
          
 <!-- Page Container -->
