--- a/index.html
+++ b/index.html
@@ -69,6 +69,17 @@ html,body,h1,h2,h3,h4,h5,h6,li {font-family: "Roboto", sans-serif}
           <br>
         </div>
       </div><br>
+      
+      <nav>
+  <ul>
+    <li><strong>Home</strong></li>
+    <li><a href="about.html">About Us</a></li>
+    <li><a href="clients.html">Our Clients</a></li>
+    <li><a href="products.html">Our Products</a></li>
+    <li><a href="services.html">Our Services</a></li>
+    <li><a href="contact.html">Contact Us</a></li>
+  </ul>
+</nav><br>
 
     <!-- End Left Column -->
     </div>
