--- a/index.html
+++ b/index.html
@@ -66,20 +66,21 @@ html,body,h1,h2,h3,h4,h5,h6,li {font-family: "Roboto", sans-serif}
           <div class="w3-light-grey w3-round-xlarge">
             <div class="w3-round-xlarge w3-teal" style="height:24px;width:10%"></div>
           </div>
-          <br>
+          <hr>
+          
+          <nav>
+            <ul>
+              <p class="w3-large w3-text-theme"><b></i>Home</b></p>
+          <li><a href="about.html">About Us</a></li>
+          <li><a href="clients.html">Our Clients</a></li>
+          <li><a href="products.html">Our Products</a></li>
+          <li><a href="services.html">Our Services</a></li>
+          <li><a href="contact.html">Contact Us</a></li>
+            </ul>
+          </nav>
         </div>
       </div><br>
       
-      <nav>
-  <ul>
-    <li><strong>Home</strong></li>
-    <li><a href="about.html">About Us</a></li>
-    <li><a href="clients.html">Our Clients</a></li>
-    <li><a href="products.html">Our Products</a></li>
-    <li><a href="services.html">Our Services</a></li>
-    <li><a href="contact.html">Contact Us</a></li>
-  </ul>
-</nav><br>
 
     <!-- End Left Column -->
     </div>
