--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@ html,body,h1,h2,h3,h4,h5,h6,li {font-family: "Roboto", sans-serif}
           <nav>
             <ul>
               <p class="w3-large w3-text-theme"><b></i>Home</b></p>
-          <li><a href="about.html">About Us</a></li>
+          <li><a href="rrpbook.html">RRP Manual</a></li>
           <li><a href="clients.html">Our Clients</a></li>
           <li><a href="products.html">Our Products</a></li>
           <li><a href="services.html">Our Services</a></li>
