--- a/rrpbook.html
+++ b/rrpbook.html
@@ -28,7 +28,16 @@ html,body,h1,h2,h3,h4,h5,h6,li {font-family: "Roboto", sans-serif}
     <!-- Left Column -->
     <div class="w3-third">
       <div class="w3-white w3-text-grey w3-card-4">
-        
+         <nav>
+            <ul>
+              <p class="w3-large w3-text-theme"><b></i>Home</b></p>
+          <li><a href="rrpbook.html">RRP Manual</a></li>
+          <li><a href="clients.html">Our Clients</a></li>
+          <li><a href="products.html">Our Products</a></li>
+          <li><a href="services.html">Our Services</a></li>
+          <li><a href="contact.html">Contact Us</a></li>
+            </ul>
+          </nav>
       </div><br>
 
     <!-- End Left Column -->
