--- a/rrpbook.html
+++ b/rrpbook.html
@@ -7,6 +7,8 @@
 <link rel='stylesheet' href='https://fonts.googleapis.com/css?family=Roboto'>
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 <link href="https://tastyoreoz.github.io/tastyoreoz/">
+<link href="module1/">
+
 <style>
 html,body,h1,h2,h3,h4,h5,h6,li {font-family: "Roboto", sans-serif}
   
@@ -28,7 +30,7 @@ html,body,h1,h2,h3,h4,h5,h6,li {font-family: "Roboto", sans-serif}
     <!-- Left Column -->
     <div class="w3-third">
       <div class="w3-white w3-text-grey w3-card-4">
-        br
+        <br>
          <nav>
            <ul>
              <p class="w3-large w3-text-theme"><b></i>Table of Contents</b></p>
@@ -43,7 +45,7 @@ html,body,h1,h2,h3,h4,h5,h6,li {font-family: "Roboto", sans-serif}
                <li><a href="index.html">Return</a></li>
             </ul>
       </nav>
-    br
+    <br>
   </div>
 
     <!-- End Left Column -->
@@ -54,7 +56,7 @@ html,body,h1,h2,h3,h4,h5,h6,li {font-family: "Roboto", sans-serif}
           
       <div class="w3-container w3-card w3-white">
         <div class="w3-display-container">
-          <img src="/module1/page_009.pdf" style="width:100%" alt="Avatar">
+          <img src="page_009.pdf" style="width:100%" alt="Avatar">
         </div>
       </div>
 
