--- a/rrpbook.html
+++ b/rrpbook.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+b<!DOCTYPE html>
 <html>
 <title>RRP Manual</title>
 <meta charset="UTF-8">
@@ -56,7 +56,7 @@ html,body,h1,h2,h3,h4,h5,h6,li {font-family: "Roboto", sans-serif}
           
       <div class="w3-container w3-card w3-white">
         <div class="w3-display-container">
-          <img src="page_009.pdf" style="width:100%" alt="Avatar">
+          <embed src="page_009.pdf" style="width:100%" alt="Avatar">
         </div>
       </div>
 
