--- a/rrpbook.html
+++ b/rrpbook.html
@@ -7,7 +7,7 @@ b<!DOCTYPE html>
 <link rel='stylesheet' href='https://fonts.googleapis.com/css?family=Roboto'>
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 <link href="https://tastyoreoz.github.io/tastyoreoz/">
-<link href="module1/">
+<link href="https://tastyoreoz.github.io/tastyoreoz/module1/">
 
 <style>
 html,body,h1,h2,h3,h4,h5,h6,li {font-family: "Roboto", sans-serif}
