--- a/rrpbook.html
+++ b/rrpbook.html
@@ -56,7 +56,7 @@ html,body,h1,h2,h3,h4,h5,h6,li {font-family: "Roboto", sans-serif}
           
       <div class="w3-container w3-card w3-white">
         <div class="w3-display-container">
-          <embed url="https://tastyoreoz.github.io/tastyoreoz/module1/page_009.pdf" height="100%">
+          <embed url="https://tastyoreoz.github.io/tastyoreoz/module1/page_009.pdf" height="100%" width="100%">
         </div>
       </div>
 
