--- a/rrpbook.html
+++ b/rrpbook.html
@@ -55,7 +55,7 @@ html,body,h1,h2,h3,h4,h5,h6,li {font-family: "Roboto", sans-serif}
           
       <div class="w3-container w3-card w3-white">
         <div class="w3-display-container">
-          <iframe src="module1/page_009.pdf" width="100%"></iframe>
+          <iframe src="module1/page_009.pdf" width="100%" height="100%"></iframe>
         </div>
       </div>
 
