--- a/rrpbook.html
+++ b/rrpbook.html
@@ -55,14 +55,14 @@ html,body,h1,h2,h3,h4,h5,h6,li {font-family: "Roboto", sans-serif}
           
       <div class="w3-container w3-card w3-white">
         <div class="w3-display-container">
-          <img src="book/page_001.jpg" width="100%" height="100%">
-          <img src="book/page_002.jpg" width="100%" height="100%">
-          <img src="book/page_003.jpg" width="100%" height="100%">
-          <img src="book/page_004.jpg" width="100%" height="100%">
-          <img src="book/page_005.jpg" width="100%" height="100%">
-          <img src="book/page_006.jpg" width="100%" height="100%">
-          <img src="book/page_007.jpg" width="100%" height="100%">
-          <img src="book/page_008.jpg" width="100%" height="100%">
+          <img src="book/page_001.jpg" width="100%">
+          <img src="book/page_002.jpg" width="100%">
+          <img src="book/page_003.jpg" width="100%">
+          <img src="book/page_004.jpg" width="100%">
+          <img src="book/page_005.jpg" width="100%">
+          <img src="book/page_006.jpg" width="100%">
+          <img src="book/page_007.jpg" width="100%">
+          <img src="book/page_008.jpg" width="100%">
         </div>
       </div>
 
