--- a/rrpbook.html
+++ b/rrpbook.html
@@ -1,4 +1,4 @@
-b<!DOCTYPE html>
+<!DOCTYPE html>
 <html>
 <title>RRP Manual</title>
 <meta charset="UTF-8">
@@ -11,13 +11,8 @@ b<!DOCTYPE html>
 <style>
 html,body,h1,h2,h3,h4,h5,h6,li {font-family: "Roboto", sans-serif}
   
- body {
- background-image: url('1668079.gif');
- background-repeat: no-repeat;
- background-size: 100% 100%;
-}
 </style>
-<body class="w3-light-teal">
+<body class="w3-light-grey">
  
          
 <!-- Page Container -->
@@ -33,8 +28,8 @@ html,body,h1,h2,h3,h4,h5,h6,li {font-family: "Roboto", sans-serif}
          <nav>
            <ul>
              <p class="w3-large w3-text-theme"><b></i>Table of Contents</b></p>
-               <li><a href="">Module 1</a></li>
-               <li><a href="">Module 2</a></li>
+               <li><a href="module1">Module 1</a></li>
+               <li><a href="module2">Module 2</a></li>
                <li><a href="">Module 3</a></li>
                <li><a href="">Module 4</a></li>
                <li><a href="">Module 5</a></li>
@@ -45,7 +40,7 @@ html,body,h1,h2,h3,h4,h5,h6,li {font-family: "Roboto", sans-serif}
             </ul>
       </nav>
     <br>
-  </div>
+  </div><br>
 
     <!-- End Left Column -->
     </div>
@@ -63,6 +58,18 @@ html,body,h1,h2,h3,h4,h5,h6,li {font-family: "Roboto", sans-serif}
           <img src="book/page_006.jpg" width="100%">
           <img src="book/page_007.jpg" width="100%">
           <img src="book/page_008.jpg" width="100%">
+          <div id='module1'><a name='module1'></a></div>
+          <img src="book/page_009.jpg" width="100%">
+          <img src="book/page_010.jpg" width="100%">
+          <img src="book/page_011.jpg" width="100%">
+          <img src="book/page_012.jpg" width="100%">
+          <img src="book/page_013.jpg" width="100%">
+          <img src="book/page_014.jpg" width="100%">
+          <img src="book/page_015.jpg" width="100%">
+          <img src="book/page_016.jpg" width="100%">
+          <img src="book/page_017.jpg" width="100%">
+          <img src="book/page_018.jpg" width="100%">
+          <div id='module2'><a name='module2'></a></div>
         </div>
       </div>
 
