--- a/rrpbook.html
+++ b/rrpbook.html
@@ -28,8 +28,8 @@ html,body,h1,h2,h3,h4,h5,h6,li {font-family: "Roboto", sans-serif}
          <nav>
            <ul>
              <p class="w3-large w3-text-theme"><b></i>Table of Contents</b></p>
-               <li><a href="/sample.htm#module1">Module 1</a></li>
-               <li><a href="/sample.htm#module2">Module 2</a></li>
+               <li><a href="#module1">Module 1</a></li>
+               <li><a href="#module2">Module 2</a></li>
                <li><a href="">Module 3</a></li>
                <li><a href="">Module 4</a></li>
                <li><a href="">Module 5</a></li>
