--- a/rrpbook.html
+++ b/rrpbook.html
@@ -30,7 +30,7 @@ html,body,h1,h2,h3,h4,h5,h6,li {font-family: "Roboto", sans-serif}
              <p class="w3-large w3-text-theme"><b></i>Table of Contents</b></p>
                <li><a href="#module1">Module 1</a></li>
                <li><a href="#module2">Module 2</a></li>
-               <li><a href="">Module 3</a></li>
+               <li><a href="#module3">Module 3</a></li>
                <li><a href="">Module 4</a></li>
                <li><a href="">Module 5</a></li>
                <li><a href="">Module 6</a></li>
@@ -70,6 +70,54 @@ html,body,h1,h2,h3,h4,h5,h6,li {font-family: "Roboto", sans-serif}
           <img src="book/page_017.jpg" width="100%">
           <img src="book/page_018.jpg" width="100%">
           <div id='module2'><a name='module2'></a></div>
+          <img src="book/page_019.jpg" width="100%">
+          <img src="book/page_020.jpg" width="100%">
+          <img src="book/page_021.jpg" width="100%">
+          <img src="book/page_022.jpg" width="100%">
+          <img src="book/page_023.jpg" width="100%">
+          <img src="book/page_024.jpg" width="100%">
+          <img src="book/page_025.jpg" width="100%">
+          <img src="book/page_026.jpg" width="100%">
+          <img src="book/page_027.jpg" width="100%">
+          <img src="book/page_028.jpg" width="100%">
+          <img src="book/page_029.jpg" width="100%">
+          <img src="book/page_030.jpg" width="100%">
+          <img src="book/page_031.jpg" width="100%">
+          <img src="book/page_032.jpg" width="100%">
+          <img src="book/page_033.jpg" width="100%">
+          <img src="book/page_034.jpg" width="100%">
+          <div id='module3'><a name='module3'></a></div>
+          <img src="book/page_035.jpg" width="100%">
+          <img src="book/page_036.jpg" width="100%">
+          <img src="book/page_037.jpg" width="100%">
+          <img src="book/page_038.jpg" width="100%">
+          <img src="book/page_039.jpg" width="100%">
+          <img src="book/page_040.jpg" width="100%">
+          <img src="book/page_041.jpg" width="100%">
+          <img src="book/page_042.jpg" width="100%">
+          <img src="book/page_043.jpg" width="100%">
+          <img src="book/page_044.jpg" width="100%">
+          <img src="book/page_045.jpg" width="100%">
+          <img src="book/page_045.jpg" width="100%">
+          <img src="book/page_046.jpg" width="100%">
+          <img src="book/page_047.jpg" width="100%">
+          <img src="book/page_048.jpg" width="100%">
+          <img src="book/page_049.jpg" width="100%">
+          <img src="book/page_050.jpg" width="100%">
+          <img src="book/page_051.jpg" width="100%">
+          <img src="book/page_052.jpg" width="100%">
+          <img src="book/page_053.jpg" width="100%">
+          <img src="book/page_054.jpg" width="100%">
+          <img src="book/page_055.jpg" width="100%">
+          <img src="book/page_056.jpg" width="100%">
+          <img src="book/page_057.jpg" width="100%">
+          <img src="book/page_058.jpg" width="100%">
+          <img src="book/page_059.jpg" width="100%">
+          <img src="book/page_060.jpg" width="100%">
+          <img src="book/page_061.jpg" width="100%">
+          <img src="book/page_062.jpg" width="100%">
+          <div id='module4'><a name='module4'></a></div>
+
         </div>
       </div>
 
