--- a/rrpbook.html
+++ b/rrpbook.html
@@ -48,7 +48,7 @@ html,body,h1,h2,h3,h4,h5,h6,li {font-family: "Roboto", sans-serif}
                <li><a href="#appendix9">Appendix 9: Paint Chip Sample Collection Guide</a></li><br>
                <li><a href="#appendix10">Appendix 10: For More Information</a></li>
         <hr>
-               <p><a href="index.html">Return</a></p>
+               <p><a href="index.html">Return to previous page/a></p>
             </ul>
       </nav>
     <br>
