--- a/rrpbook.html
+++ b/rrpbook.html
@@ -251,7 +251,7 @@ html,body,h1,h2,h3,h4,h5,h6,li {font-family: "Roboto", sans-serif}
           <img src="book/page_174.jpg" width="100%">
           <img src="book/page_175.jpg" width="100%">
           <img src="book/page_176.jpg" width="100%">
-          <div id='appendix4'><a name='appendix4></a></div>
+          <div id='appendix4'><a name='appendix4'></a></div>
           <img src="book/page_177.jpg" width="100%">
           <img src="book/page_178.jpg" width="100%">
           <img src="book/page_179.jpg" width="100%">
