--- a/rrpbook.html
+++ b/rrpbook.html
@@ -35,7 +35,7 @@ html,body,h1,h2,h3,h4,h5,h6,li {font-family: "Roboto", sans-serif}
                <li><a href="#module4">Module 4: Contain Dust During Work</a></li><br>
                <li><a href="#module5">Module 5: During The Work</a></li><br>
                <li><a href="#module6">Module 6: Cleaning Activities and Checking Your Work</a></li><br>
-               <li><a href="#module7">Module 7: Recordkeeping/a></li><br>
+               <li><a href="#module7">Module 7: Recordkeeping</a></li><br>
                <li><a href="#module8">Module 8: Training Non-Certified Renovation Workers</a></li><hr>
                <li><a href="#appendix1">Appendix 1: This Appendix is Intentionally Left Blank</a></li><br>
                <li><a href="#appendix2">Appendix 2: U.S. Department of Housing and Urban Developement (HUD) Requirements</a></li><br>
