--- a/index.html
+++ b/index.html
@@ -3,18 +3,11 @@
 <title>Killed by a Cap Gun</title>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1">
-<link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
-<link rel='stylesheet' href='https://fonts.googleapis.com/css?family=Roboto'>
-<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 <link href="https://tastyoreoz.github.io/tastyoreoz/">
+<link rel="stylesheet" href="w3style.css">
+<link rel='stylesheet' href="w3style1.css">
+<link rel="stylesheet" href="w3style2.css">
 <style>
-html,body,h1,h2,h3,h4,h5,h6,li {font-family: "Roboto", sans-serif}
-  
- body {
- background-image: url('1668079.gif');
- background-repeat: no-repeat;
- background-size: 100% 100%;
-}
 </style>
 <body class="w3-light-teal">
  
@@ -29,7 +22,7 @@ html,body,h1,h2,h3,h4,h5,h6,li {font-family: "Roboto", sans-serif}
     <div class="w3-third">
       <div class="w3-white w3-text-grey w3-card-4">
         <div class="w3-display-container">
-          <img src="drawsunflower.jpg" style="width:100%" alt="Avatar">
+          <img src="img/drawsunflower.jpg" style="width:100%" alt="Avatar">
           <div class="w3-display-bottomleft w3-container w3-text-black">
             <h2>Killed by a Cap Gun</h2>
           </div>
@@ -131,7 +124,7 @@ html,body,h1,h2,h3,h4,h5,h6,li {font-family: "Roboto", sans-serif}
       
       <div class="w3-container w3-card w3-white">
         <div class="w3-display-container">
-          <img src="20201102_192414.jpg" style="width:100%" alt="Avatar">
+          <img src="img/20201102_192414.jpg" style="width:100%" alt="Avatar">
           <div class="w3-display-bottomleft w3-container w3-text-black">
             <h2></h2>
           </div>
@@ -148,14 +141,7 @@ html,body,h1,h2,h3,h4,h5,h6,li {font-family: "Roboto", sans-serif}
 </div>
 
 <footer class="w3-container w3-teal w3-center w3-margin-top">
-  <p>Find me on social media.</p>
-  <i class="fa fa-facebook-official w3-hover-opacity"></i>
-  <i class="fa fa-instagram w3-hover-opacity"></i>
-  <i class="fa fa-snapchat w3-hover-opacity"></i>
-  <i class="fa fa-pinterest-p w3-hover-opacity"></i>
-  <i class="fa fa-twitter w3-hover-opacity"></i>
-  <i class="fa fa-linkedin w3-hover-opacity"></i>
-  <p>Powered by <a href="https://www.w3schools.com/w3css/default.asp" target="_blank">w3.css</a></p>
+
 </footer>
 
 </body>
