--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
           <nav>
             <ul>
               <p class="w3-large w3-text-theme"><b></i>Home</b></p>
-          <li><a href="rrpbook">RRP Manual</a></li>
+          <li><a href="rrpbook" title="rrpbook">RRP Manual</a></li>
           <li><a href="clients.html">Our Clients</a></li>
           <li><a href="products.html">Our Products</a></li>
           <li><a href="services.html">Our Services</a></li>
