--- a/index.html
+++ b/index.html
@@ -1,13 +1,12 @@
-<!DOCTYPE html>
+u<!DOCTYPE html>
 <html>
   <head>
-    <title>Killed by a Cap Gun</title>
+    <title>Seagull Environmental</title>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link href="https://tastyoreoz.github.io/tastyoreoz/">
     <link rel="stylesheet" href="mstyle.css">
   </head>
-<title>Killed by a Cap Gun</title>
 
 <body>
 
@@ -66,9 +65,6 @@
   <footer>
     <div>
       <p> Seagull Environmental Management Company Inc </p>
-    </div>
-    <div>
-      <p> 2835 NW 12th Ave, Wilton Manors, FL 33311 </p>
     </div>
     <div>
       <p> 800-966-9933 </p>
