Removed "seagull" from the site

--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>Seagull Environmental</title>
+    <title>Killed by a Cap Gun</title>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link href="https://tastyoreoz.github.io/tastyoreoz/">
@@ -11,68 +11,15 @@
 <body>
 
   <nav>
-    <div>
-      <b>Link</b>
-    </div>
-    <div>
-      <b>Link</b>
-    </div>
-    <div>
-      <b>Link</b>
-    </div>
-    <div>
-      <b>Link</b>
-    </div>
-    <div>
-      <b>Link</b>
-    </div>
 
   </nav>
 
-  <header>
 
-        <span>
-          <h1 style="margin-top: 0px;margin-bottom: 0px;">Seagull Environmental</h1>
-          <b style="margin-top: 0px;margin-bottom: 0px;">in business as long as The Environmental Institute </b>
-          <b style="margin-top: 0px;margin-bottom: 0px;font-size:60%;">(maybe longer)</b>
-        </span>
-
-  </header>
-
-  
 
   <main>
-    <section>
 
-        <div>
-          <p><b>EPA Accepted & State Approved<br>
-            Lead-Safe Renovation, Repair & Painting Training</b></p>
-          <p><b>At Seagull</b>, we offer lead training every day.</p>
-          <p>We are <b>approved</b> or <b>accepted</b> in 48 states.</p>
-          <p>Call <b>anytime</b> for <b>free</b> consulting and guidance.<br>
-            We want to work with you to make your jobs safer,<br>
-            both during and after the work.</p>
-          <p>Our office number is <b style="font-size:120%;">800-966-9933</b>.</p>
-          <p>You can also call Jim Stump's number,<br>
-             any time at <b style="font-size:120%;">954-687-5664</b>.</p>
-
-
-        </div> 
-
-    </section>
   </main>
 
-  <footer>
-    <div>
-      <p> Seagull Environmental Management Company Inc </p>
-    </div>
-    <div>
-      <p> 800-966-9933 </p>
-    </div>
-    <div>
-      <p> seagull.manage@gmail.com </p>
-    </div>
-  </footer>
 
 </body>
 
