--- a/index.html
+++ b/index.html
@@ -17,13 +17,19 @@
       <a>the</a><br>
       <a>other</a><br>
     </nav>
+    <main>
     <section>
       <h1>Welcome!</h1>
-      <p>This is a website that I put together for fun. <br>I enjoy programming and making things.</p>
+      <p>This is a website that I put together for fun. <br>I enjoy programming and making stuff (LOL, because the website is OrrStuff, I'm so clever).</p>
+      <p>One of my goals for this website is to avoid inducing eyestrain in the visitors (you <3).</p>
+      <p>I accomplish this by using darker colors. Even these letters are a light grey instead of white</p>
+      <p>While I don't want the website to hurt your eyes, I am okay with the jokes making you hate me.</p>
     </section>
-
-
-
+    <section>
+      <p>HaHaHa!</p>
+    </section>
+    </main>
+    </body>
   </body>
   
 
