changed anchors to blocks removed breaks after anchors hover function now looks much better

--- a/index.html
+++ b/index.html
@@ -12,17 +12,17 @@
   <body>
     <nav>
       <h1>OrrStuff.com</h1>
-      <a class="sidebar">this</a>
-      <a class="sidebar">that</a>
-      <a class="sidebar">the</a>
-      <a class="sidebar">other</a>
+      <a>this</a><br>
+      <a>that</a><br>
+      <a>the</a><br>
+      <a>other</a><br>
     </nav>
     <main>
     <section>
       <h1>Welcome!</h1>
-      <p>This is a website that I put together for fun. I enjoy programming and making stuff (LOL, because the website is OrrStuff, I'm so clever).</p>
+      <p>This is a website that I put together for fun. <br>I enjoy programming and making stuff (LOL, because the website is OrrStuff, I'm so clever).</p>
       <p>One of my goals for this website is to avoid inducing eyestrain in the visitors (you <3).</p>
-      <p>I accomplish this by using darker colors. Even these letters are a light grey instead of white.</p>
+      <p>I accomplish this by using darker colors. Even these letters are a light grey instead of white</p>
       <p>While I don't want the website to hurt your eyes, I am okay with the jokes making you hate me.</p>
     </section>
     <section>
