--- a/index.html
+++ b/index.html
@@ -14,8 +14,8 @@
       <h1>OrrStuff.com</h1>
       <a class="sidebar">this</a>
       <a class="sidebar">that</a>
-      <a class="sidebar">the</a>
       <a class="sidebar">other</a>
+      <a class="sidebar" href="https://www.youtube.com/watch?v=jfKfPfyJRdk">Study Music</a>
     </nav>
     <main>
     <section>
