removed text decorations from anchors set anchor color back to grey set anchor target to _blank (opens in new tab)

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
       <a class="sidebar">this</a>
       <a class="sidebar">that</a>
       <a class="sidebar">other</a>
-      <a class="sidebar" href="https://www.youtube.com/watch?v=jfKfPfyJRdk">Study Music</a>
+      <a class="sidebar" href="https://www.youtube.com/watch?v=jfKfPfyJRdk" target="_blank">Study Music</a>
     </nav>
     <main>
     <section>
