--- a/index.html
+++ b/index.html
@@ -11,11 +11,16 @@
 
   <body>
     <nav>
+      
       <h1>OrrStuff.com</h1>
-      <a class="sidebar">this</a>
-      <a class="sidebar">that</a>
-      <a class="sidebar">other</a>
+      <a class="sidebar">This</a>
+      <a class="sidebar">That</a>
+      <a class="sidebar">Other</a>
       <a class="sidebar" href="https://www.youtube.com/watch?v=jfKfPfyJRdk" target="_blank">Study Music</a>
+      
+      <div class="bottom">
+        <a class="sidebar">Bottom</a>
+      </div>
     </nav>
     <main>
     <section>
