fixed the about link added About to about title

--- a/about.html
+++ b/about.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>OrrStuff</title>
+    <title>OrrStuff - About</title>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Raleway">
@@ -12,7 +12,7 @@
   <body>
     <nav>
       
-      <a class="logo" href="https://orrstuff.com/"><h1>OrrStuff.com</h1></a>
+      <a class="logo" href="https://tastyoreoz.github.io/tastyoreoz/index.html/"><h1>OrrStuff.com</h1></a>
       <a class="sidebar">This</a>
       <a class="sidebar">That</a>
       <a class="sidebar">Other</a>
