--- a/about.html
+++ b/about.html
@@ -12,7 +12,7 @@
   <body>
     <nav>
       
-      <a class="logo" href="https://tastyoreoz.github.io/tastyoreoz/index.html/"><h1>OrrStuff.com</h1></a>
+      <a class="logo" href="https://orrstuff.com/"><h1>OrrStuff.com</h1></a>
       <a class="sidebar">This</a>
       <a class="sidebar">That</a>
       <a class="sidebar">Other</a>
