--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
       <a class="sidebar">That</a>
       <a class="sidebar">Other</a>
       <a class="sidebar" href="https://www.youtube.com/watch?v=jfKfPfyJRdk" target="_blank">Study Music</a>
-      <a class="sidebar" href="https://orrstuff.com/about.html">About</a>
+      <a class="sidebar" href="https://orrstuff.com/about">About</a>
 
       <div class="sbottom">
         
