--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
     </nav>
     <main>
     <section>
-      <h1>Welcome!</h1>
+      <h1 style="text-align: center;">Welcome!</h1>
       <p>This is a website that I put together for fun. I enjoy programming and making stuff (LOL, because the website is OrrStuff, I'm so clever).</p>
       <p>One of my goals for this website is to avoid inducing eyestrain in the visitors (you <3).</p>
       <p>I accomplish this by using darker colors. Even these letters are a light grey instead of white.</p>
