--- a/index.html
+++ b/index.html
@@ -12,11 +12,11 @@
   <body>
     <nav>
       
-      <a class="logo"><h1>OrrStuff.com</h1></a>
+      <a class="logo">OrrStuff.com</a>
       <a class="sidebar">This</a>
       <a class="sidebar">That</a>
       <a class="sidebar">Other</a>
-      <a class="sidebar" href="https://www.youtube.com/watch?v=jfKfPfyJRdk" target="_blank">Study Music</a>
+      <a class="sidebar" href="https://www.youtube.com/watch?v=jfKfPfyJRdk" target="_blank">Music</a>
       <a class="sidebar" href="https://orrstuff.com/about">About</a>
 
       <div class="sbottom">
