--- a/index.html
+++ b/index.html
@@ -12,7 +12,8 @@
   <body>
     <nav>
       
-      <a class="logo">OrrStuff.com</a>
+      <a class="logo1">OrrStuff.com</a>
+      <a class="logo2">OrrStuff</a>
       <a class="sidebar">This</a>
       <a class="sidebar">That</a>
       <a class="sidebar">Other</a>
