--- a/about.html
+++ b/about.html
@@ -18,7 +18,7 @@
       <a class="sidebar">That</a>
       <a class="sidebar">Other</a>
       <a class="sidebar" href="https://www.youtube.com/watch?v=jfKfPfyJRdk" target="_blank">Music</a>
-      <a class="sidebar">About</a>
+      <a class="sidebar" href="https://orrstuff.com/about">About</a>
 
       <div class="sbottom">
         
