--- a/index.html
+++ b/index.html
@@ -12,8 +12,8 @@
   <body>
     <nav>
       
-      <a class="logo1">OrrStuff.com</a>
-      <a class="logo2">OrrStuff</a>
+      <a class="logo1" href="https://orrstuff.com/">OrrStuff.com</a>
+      <a class="logo2" href="https://orrstuff.com/">OrrStuff</a>
       <a class="sidebar">This</a>
       <a class="sidebar">That</a>
       <a class="sidebar">Other</a>
