added bottom page page is pulled from wikipedia linked bottom buttons to bottom page

--- a/about.html
+++ b/about.html
@@ -22,8 +22,8 @@
 
       <div class="sbottom">
         
-        <a class="sidebar">Bottom</a>
-      </div>
+        <a class="sidebar" href="https://orrstuff.com/bottom">Bottom</a>
+    </div>
     </nav>
     <main>
     <section>
