--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 
       <div class="sbottom">
         
-        <a class="sidebar">Bottom</a>
+        <a class="sidebar" href="https://orrstuff.com/bottom">Bottom</a>
       </div>
     </nav>
     <main>
